--- a/main.html
+++ b/main.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <link rel = "stylesheet" href = "style.css">
+   
 
     <title>genZhub</title>
 </head>
 <body>
    
     <div class="navbar">
-        <div class="title">genZhub</div>
+        <div class = "title" id = "title"></div>
         <div class="navelements">
-            <div class="navone">Home</div>
-            <div class="navone">Tech</div>
-            <div class="navone">Social Media</div>
-            <div class="navone">Business</div>
-            <div class="navone">Sports</div>
-            <div class="navone">Entertainment</div>
+            <div class="navone"></div>
+            <div class="navone"></div>
+            <div class="navone"></div>
+            <div class="navone"></div>
+            <div class="navone"></div>
+            <div class="navone"></div>
         </div>
     </div>
-    
-    
+    <script src = "index.js"></script>
 </body>
 </html>
