--- a/main.html
+++ b/main.html
@@ -20,7 +20,17 @@
             <div class="navone"></div>
             <div class="navone"></div>
         </div>
+        <div class="dropdown">
+            <button onclick="toggleDropdown()" class="dropbtn"><img src="image/dashboard1.png" alt="" id="dashboardimg"></button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="#">Login</a>
+              <a href="#">Sign Up</a>
+            </div>
+          </div>          
     </div>
+    <!-- <div class="blogs">
+        hello
+    </div> -->
     <script src = "index.js"></script>
 </body>
 </html>
