--- a/main.html
+++ b/main.html
@@ -3,34 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "style.css">
-   
-
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
     <title>genZhub</title>
 </head>
 <body>
-   
+    <!-- htmlfor navbar -->
     <div class="navbar">
-        <div class = "title" id = "title"></div>
-        <div class="navelements">
-            <div class="navone"></div>
-            <div class="navone"></div>
-            <div class="navone"></div>
-            <div class="navone"></div>
-            <div class="navone"></div>
-            <div class="navone"></div>
-        </div>
-        <div class="dropdown">
-            <button onclick="toggleDropdown()" class="dropbtn"><img src="image/dashboard1.png" alt="" id="dashboardimg"></button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="#">Login</a>
-              <a href="#">Sign Up</a>
-            </div>
-          </div>          
+    <div class="profiletag">
+        <img src="image/profile.png" alt="" id="profileimage" >
     </div>
-    <!-- <div class="blogs">
-        hello
-    </div> -->
-    <script src = "index.js"></script>
+    <div class="dropdown-container">
+        <button onclick="toggleDropdown()" onmouseleave="toggleDropdownLeave" class="dropdown-button"><img src="image/dashboard1.png" alt="" id="menuimage"></button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>    
+    </div>  
+    <!-- html for board -->
+    <div class="board">
+       <div class="title">
+        <h1>Welcome to</h1>
+        <h1 id="mtitle">genZhub</h1>
+       </div>
+       <div class="login">
+          <button id="btn1">Login</button>
+          <button id="btn2">Register</button>
+       </div>
+    </div> 
+    <script src="index.js"></script>
 </body>
 </html>
