--- a/tech/tech.html
+++ b/tech/tech.html
@@ -16,7 +16,7 @@
             </div>
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                    <img src="../image/dashboard1.png" alt="" id="menuimage">
+                    <!-- <img src="../image/dashboard1.png" alt="" id="menuimage"> -->
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="#home">Profile</a>
@@ -31,6 +31,18 @@
             </div>
         </div>
     </div>
+   
+    <div class="widgets">
+        <div class="widget"></div>
+        <div class="widget"></div>
+        <div class="widget"></div>
+        <div class="widget"></div>
+    </div>
+    <div class="dashboard">
+        <h1 id="titletwo">Technology</h1>
+        <div class="polls"></div>
+    </div>
+    
     <script src="tech.js"></script> 
 </body>
 </html>
