--- a/register/login/register.html
+++ b/register/login/register.html
@@ -30,7 +30,7 @@
             border-radius: 5px;
         }
         .form-group button {
-            width: 150px;
+            width: 100px;
             padding: 10px;
             background-color: #4CAF50;
             color: white;
@@ -38,6 +38,7 @@
             border-radius: 5px;
             cursor: pointer;
             display: flex;
+            margin: 5px;
         }
         #texta{
             /* border: 2px solid black; */
@@ -85,7 +86,8 @@
                 <input type="number" id="age" name="age" required >
             </div>
             <div class="form-group">
-                <button type="submit">Sign Up</button>
+                <button id="register">Sign Up</button>
+                <button id="google">Google</button>
                 <div class="samebox">
                     <h3>Already have an account?</h3>
                     <a href="login.html">Login</a>
@@ -95,4 +97,87 @@
         </form>
     </div>
 </body>
+<script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+        import { getAuth, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+        // import { getDatabase, set, ref } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+    
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+        apiKey: "AIzaSyDeGzNFHeNnDYpO_4bFsUA38BFEqomNeFo",
+        authDomain: "genzhub-fd763.firebaseapp.com",
+        projectId: "genzhub-fd763",
+        storageBucket: "genzhub-fd763.appspot.com",
+        messagingSenderId: "893420221934",
+        appId: "1:893420221934:web:64e10ccd7212ffc436caff",
+        measurementId: "G-W0ELG1XK21",
+        // databaseURL: "https://genzhub-fd763-default-rtdb.firebaseio.com"
+        };
+    
+        // Initialize Firebase
+        const app =   initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const auth = getAuth(app);
+        auth.languageCode = 'en';
+        // const database = getDatabase(app);
+        console.log(app);
+        const provider = new GoogleAuthProvider();
+
+        //----- New Registration code start	  
+	  document.getElementById("register").addEventListener("click", function() {
+          var mobile = document.getElementById("mobile").value;         
+		  var email =  document.getElementById("email").value;
+		  var password = document.getElementById("password").value;
+          var age = document.getElementById("age").value;
+		  //For new registration
+		  createUserWithEmailAndPassword(auth, email, password)
+		  .then((userCredential) => {
+		    // Signed in 
+		    const user = userCredential.user;
+		    console.log(user);
+            // set(ref(database,'users/'+ user.uid),{
+            //         email: email,
+            //         mobile: mobile
+            //     })
+		    alert("Registration successfully!!");
+		    // ...
+		  })
+		  .catch((error) => {
+		    const errorCode = error.code;
+		    const errorMessage = error.message;
+		    // ..
+		    console.log(errorMessage);
+		    alert(error);
+		  });		  		  
+	  });
+	  //----- End
+      function saveAgeToDatabase(userId, age) {
+    const userRef = ref(db, 'users/' + userId);
+    set(userRef, { age: age });
+}
+
+
+    const google = document.getElementById("google");
+    google.addEventListener("click",function(){
+        signInWithPopup(auth, provider)
+  .then((result) => {
+    const credential = GoogleAuthProvider.credentialFromResult(result);
+    const user = result.user;
+    console.log(user);
+    window.location.href = "login.html";
+    // ...
+  }).catch((error) => {
+    const errorCode = error.code;
+    const errorMessage = error.message;
+    // ...
+  });
+    })
+  </script>
 </html>
