--- a/home/main.html
+++ b/home/main.html
@@ -40,21 +40,26 @@
     <!-- contact us form -->
     <div class="contact-us">
         <h1 id="text">Lets's Get in Touch</h1>
-        <form>
-            <div class="form-group">
-                <label for="email">email</label>
-                <input type="email" id="email" name="email" required autocomplete="email">
-            </div>
+        <form action="" id="aboutForm">
+
             <div class="form-group">
                 <label for="name">name</label>
-                <input type="name" id="name" name="name" required>
+                <input type="text" id="name" name="name" required placeholder="Enter your name">
+            </div>
+            <div class="form-group">
+                <label for="email">email</label>
+                <input type="email" id="email" name="email" required autocomplete="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
                 <label for="message">message</label>
-                <textarea name="message" id="message" cols="80" rows="20"></textarea>
+                <textarea name="message" id="message" cols="80" rows="20" placeholder="enter your comment here"></textarea>
             </div>
-            <button id="contact-button">Get in Touch</button>
+            <button id="contact-button" type="submit">Get in Touch</button>
+
         </form>
     </div>
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
