--- a/register/login/profile.html
+++ b/register/login/profile.html
@@ -7,7 +7,7 @@
 <body>
     <div class="navbar">
         <h1>genZhub</h1>
-        <div class="photo"><img src="" alt=""></div>
+        <div class="userProfilePicture"><img src="" alt=""></div>
     </div>
     <div class="lit-content">
         <h1>Profile</h1>
@@ -15,12 +15,13 @@
     </div>
     <div class="profile-section">
         <div class="profile">
+        <div class="profilePageContainer">
+
             <h1>Profile</h1>
-            <div class="main-profile">
-                <img src="" alt="">
-            </div>
-            <h2>Anonomymous </h2>
-            <h3>Profession</h3>
+            <img src="" alt="" class="main-profile">
+            <h2> </h2>
+            <p></p>
+        </div>
             <div class="posts">
                 <div class="num-posts">21 <br> posts</div>
                 <div class="points">238 <br> points</div>
@@ -39,7 +40,7 @@
             <form>
                 <div class="form-group">
                     <label for="name">First Name</label>
-                    <input type="text" id="first-name" name="name" >
+                    <input type="text" id="userName" name="name" >
                 </div>
                 <div class="form-group">
                     <label for="name">Last Name</label>
@@ -51,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" >
+                    <input type="email" id="userEmail" name="email" >
                 </div>
             </form>
             <div class="about-me">
@@ -60,6 +61,27 @@
             </div>
         </div>
     </div>
-    
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js"></script> -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
+        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js";
+        import { getDatabase } from 'https://www.gstatic.com/firebasejs/10.11.1/firebase-database.js';
+        // Your Firebase config
+        var firebaseConfig = {
+            apiKey: "AIzaSyDPb6O846-piMx9Oby1oi0EpbO_Uh2CcAk",
+            authDomain: "reg-log-3cfe5.firebaseapp.com",
+            projectId: "reg-log-3cfe5",
+            storageBucket: "reg-log-3cfe5.appspot.com",
+            messagingSenderId: "129613168031",
+            appId: "1:129613168031:web:09f7172c3a85d6c27dd1aa"
+        };
+        const firebaseApp = initializeApp(firebaseConfig);
+        // Initialize Firebase
+        const database = getDatabase(firebaseApp);
+      </script>
+    <script src="ProfilePage.js" type="module"></script>
 </body>
 </html>
