--- a/register/login/register.html
+++ b/register/login/register.html
@@ -188,9 +188,8 @@ const google = document.getElementById("google");
    <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
+    import { getAuth, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
     import { getDatabase , set,ref } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-database.js";
-
 
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
@@ -207,6 +206,7 @@ const google = document.getElementById("google");
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const provider = new GoogleAuthProvider();
     const auth = getAuth(app);
     const database = getDatabase(app);
 
@@ -230,6 +230,8 @@ const google = document.getElementById("google");
                         .then(() => {
             // Data saved successfully!
             alert('user created successfully');
+            window.location.href = "login.html";
+            
             })
             .catch((error) => {
             // The write failed...
@@ -246,5 +248,39 @@ const google = document.getElementById("google");
 
             });
         });
+        const googleBtn = document.getElementById("google");
+    googleBtn.addEventListener('click', (e) => {
+            signInWithPopup(auth, provider)
+            .then((result) => {
+                // This gives you a Google Access Token. You can use it to access the Google API.
+                const credential = GoogleAuthProvider.credentialFromResult(result);
+                const token = credential.accessToken;
+                // The signed-in user info.
+                const user = result.user;
+                
+                alert(user.displayName);
+                window.location.href = "profile.html";
+                // IdP data available using getAdditionalUserInfo(result)
+                // ...
+            }).catch((error) => {
+                // Handle Errors here.
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                const email = error.customData.email;
+                const credential = GoogleAuthProvider.credentialFromError(error);
+                // ...
+                alert(errorMessage);
+            });
+
+        });
+        // function updateUserProfile() {
+        //     const userName = user.displayName;
+        //     const userEmail = user.email;
+        //     const userProfilePicture = user.photoURL;
+
+        //     document.getElementById('username').textContent = userName;
+        //     document.getElementById('userEmail').textContent = userEmail;
+        //     document.getElementById('userProfilePicture').src = userProfilePicture;
+        // }
   </script>
 </html>
