UI\UX betterment

--- a/home/main.html
+++ b/home/main.html
@@ -11,7 +11,10 @@
     <div class="navbar">
         <div class="title">genZhub</div>
         <div class="container-elements">
-            <button class="elements">Categories</button>
+            <button class="elements" id="tech-page">Technology</button>
+            <button class="elements" id="busi-page">Business</button>
+            <button class="elements" id="social-page">Social Issues</button>
+            <button class="elements" id="ente-page">Entertainment</button>
             <button class="elements" id="about-us">About Us</button>
             <button class="elements" id="forums">Forums</button>
         </div>
