--- a/tech/tech.html
+++ b/tech/tech.html
@@ -11,12 +11,10 @@
     <div class="navbar-tech">
         <h1 id="title">genZhub</h1>
         <div class="joint">
-            <div class="profile">
-                <img src="../image/profile.png" alt="" id="profileimage">
-            </div>
+            
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                    <!-- <img src="../image/dashboard1.png" alt="" id="menuimage"> -->
+                   Menu
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="#home">Profile</a>
@@ -29,10 +27,17 @@
                     <a href="#contact">Contact Us</a>
                 </div>
             </div>
+            <div class="profile">
+                <img src="../image/profile.png" alt="" id="profileimage">
+            </div>
         </div>
     </div>
    <div class="whole">
     <div class="widgets">
+        <div class="widget"></div>
+        <div class="widget"></div>
+        <div class="widget"></div>
+        <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
