--- a/home/main.html
+++ b/home/main.html
@@ -316,7 +316,7 @@
         <div class="widget"></div>
     </div>
     <!-- contact us form -->
-    <div class="contact-us" id="contact-usa">
+    <div class="contact_us" id="contact-usa">
         <h1 id="text">Lets's Get in Touch</h1>
         <form action="" id="aboutForm">
 
