--- a/tech/tech.html
+++ b/tech/tech.html
@@ -11,10 +11,9 @@
     <div class="navbar-tech">
         <h1 id="title">genZhub</h1>
         <div class="joint">
-            
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                   Menu
+                    &#9776;
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="#home">Profile</a>
@@ -44,12 +43,12 @@
         <div class="widget"></div>
     </div>
     <div class="dashboard">
-        <!-- <h1 id="titletwo">Technology</h1> -->
+        <h1 id="titletwo">Technology</h1>
         <div class="quiz-container">
             <h1>Quiz Time!</h1>
             <div id="question"></div>
             <div id="options" class="options-container"></div>
-            <button id="submitBtn">Submit</button>
+            <button id="submitBtn" class="button-two">Submit</button>
             <div id="result"></div>
         </div>
         <div class="container">
@@ -61,7 +60,7 @@
                 <label><input type="radio" name="color" value="Green"> Green</label><br>
                 <label><input type="radio" name="color" value="Yellow"> Yellow</label><br>
             </div>
-            <button onclick="submitVote()">Vote</button>
+            <button onclick="submitVote()" class="button-two">Vote</button>
             <div id="result"></div>
         </div>
     
