--- a/register/login/login.html
+++ b/register/login/login.html
@@ -79,8 +79,10 @@
             <div class="form-group">
                 <button type="button" id="submitData" name="submitData" class="loginbtn">Login</button>
                 <div class="samebox">
+                    <button id="google">Google</button>
                     <h3>Don't have an account?</h3>
                     <a href="register.html">Register</a>
+
                 </div>
             </div>
 
@@ -156,7 +158,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
 <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword ,signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
+    import { getAuth, createUserWithEmailAndPassword ,signInWithEmailAndPassword, GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
     import { getDatabase , set , ref , update} from "https://www.gstatic.com/firebasejs/10.11.1/firebase-database.js";
 
 
@@ -175,6 +177,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const provider = new GoogleAuthProvider();
     const auth = getAuth(app);
     const database = getDatabase(app);
 
@@ -214,6 +217,32 @@ document.addEventListener('DOMContentLoaded', (event) => {
                 alert(errorMessage);
             });
 
+
+        });
+
+        const googleBtn = document.getElementById("google");
+    googleBtn.addEventListener('click', (e) => {
+            signInWithPopup(auth, provider)
+            .then((result) => {
+                // This gives you a Google Access Token. You can use it to access the Google API.
+                const credential = GoogleAuthProvider.credentialFromResult(result);
+                const token = credential.accessToken;
+                // The signed-in user info.
+                const user = result.user;
+                
+                alert(user.displayName);
+                window.location.href = "profile.html";
+                // IdP data available using getAdditionalUserInfo(result)
+                // ...
+            }).catch((error) => {
+                // Handle Errors here.
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                const email = error.customData.email;
+                const credential = GoogleAuthProvider.credentialFromError(error);
+                // ...
+                alert(errorMessage);
+            });
 
         });
   </script>
