--- a/business/business.html
+++ b/business/business.html
@@ -16,14 +16,15 @@
                    Menu
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#home">Profile</a>
-                    <a href="#about">Technology</a>
-                    <a href="#contact">Social Issues</a>
-                    <a href="#contact">Business</a>
-                    <a href="#contact">Home</a>
-                    <a href="#contact">Forum/Blogs</a>
-                    <a href="#contact">About</a>
-                    <a href="#contact">Contact Us</a>
+                    <a href="../register/login/profile.html">Profile</a>
+                    <a href="../tech/tech.html">Technology</a>
+                    <a href="../social/social.html">Social Issues</a>
+                    <a href="../business/business.html">Business</a>
+                    <a href="../entertainment/enter.html">Entertainment</a>
+                    <a href="../home/main.html">Home</a>
+                    <a href="../forum/forum.html">Forum/Blogs</a>
+                    <a href="../home/about.html">About</a>
+                    <a href="../home/main.html#contact-usa">Contact Us</a>
                 </div>
             </div>
             <div class="profile">
