--- a/home/about.html
+++ b/home/about.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="../home/main.html">Home</a></li>
 				<li><a href="../register/login/profile.html">Profile</a></li>
-				<li><a href="../home/main.html#contact_usa">Contact</a></li>
+				<li><a href="../home/main.html#contact-usa">Contact</a></li>
 			</ul>
 		</div>
 		<div class="clear"></div>
