--- a/register/login/login.html
+++ b/register/login/login.html
@@ -202,6 +202,7 @@ document.addEventListener('DOMContentLoaded', (event) => {
                 .then(() => {
                     // Data saved successfully!
                     alert('user logged in successfully');
+                    window.location.href = "profile.html";
 
                  })
                     .catch((error) => {
