--- a/tech/tech.html
+++ b/tech/tech.html
@@ -14,14 +14,15 @@
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">Menu</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#home">Profile</a>
-                    <a href="#about">Technology</a>
-                    <a href="#contact">Social Issues</a>
-                    <a href="#contact">Business</a>
-                    <a href="#contact">Home</a>
-                    <a href="#contact">Forum/Blogs</a>
-                    <a href="#contact">About</a>
-                    <a href="#contact">Contact Us</a>
+                    <a href="../register/login/profile.html">Profile</a>
+                    <a href="../tech/tech.html">Technology</a>
+                    <a href="../social/social.html">Social Issues</a>
+                    <a href="../business/business.html">Business</a>
+                    <a href="../entertainment/enter.html">Entertainment</a>
+                    <a href="../home/main.html">Home</a>
+                    <a href="../forum/forum.html">Forum</a>
+                    <a href="../home/about.html">About</a>
+                    <a href="../home/main.html#contact-usa">Contact Us</a>
                 </div>
             </div>
             <div class="profile">
@@ -59,6 +60,11 @@
     </div>
     
       </section>
+      <!-- codepen  -->
+      
+
+
+
     <script>
         let quizData = []; // Array to store quiz questions
         let currentQuestion = 0; // Index of the current question
