--- a/register/login/main_profile.html
+++ b/register/login/main_profile.html
@@ -387,6 +387,14 @@ body {
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
         import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-database.js";
+        import {
+        getFirestore,
+        collection,
+        query,
+        where,
+        getDocs
+        } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js";
+
 
         const firebaseConfig = {
             apiKey: "AIzaSyDPb6O846-piMx9Oby1oi0EpbO_Uh2CcAk",
@@ -400,74 +408,51 @@ body {
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getDatabase(app);
-        const firestore = firebase.firestore();
+        const firestore = getFirestore(app);
 
-        onAuthStateChanged(auth, user => {
-            if (user) {
-                const uid = user.uid;
-                const userRef = ref(db, 'users/' + uid);
-                onValue(userRef, (snapshot) => {
-                    const data = snapshot.val();
-                    console.log(data);
-                    if (data) {
-                        document.getElementById('userName').innerText = data.firstName || '';
-                        document.getElementById('last-name').innerText = data.lastName || '';
-                        document.getElementById('about-me').innerText = data.aboutMe || '';
-                    }
-                }, {
-                    onlyOnce: true
-                });
-            } else {
-                console.log('User is not logged in');
-                window.location.href = './login.html';
-            }
+        document.addEventListener("DOMContentLoaded", async () => {
+            onAuthStateChanged(auth, async (user) => {
+                if (user) {
+                    const uid = user.uid;
+                    const userRef = ref(db, 'users/' + uid);
+                    onValue(userRef, (snapshot) => {
+                        const data = snapshot.val();
+                        console.log(data);
+                        if (data) {
+                            document.getElementById('userName').innerText = data.firstName || '';
+                            document.getElementById('last-name').innerText = data.lastName || '';
+                            document.getElementById('about-me').innerText = data.aboutMe || '';
+                        }
+                    }, {
+                        onlyOnce: true
+                    });
+                    const blogsQuery = query(collection(firestore, "blogs"), where("uid", "==", uid));
+                    const querySnapshot = await getDocs(blogsQuery);
+    
+                    const postsContainer = document.getElementById("posts-container");
+                    postsContainer.innerHTML = '';
+    
+                    querySnapshot.forEach(doc => {
+                        const blogData = doc.data();
+                        const postElement = document.createElement("div");
+                        postElement.innerHTML = `
+                            <h3>${blogData.title}</h3>
+                            <p>${blogData.content}</p>
+                            <img src="${blogData.imageUrl}" alt="Blog Image" style="width: 300px; height: auto;">
+                        `;
+                        postsContainer.appendChild(postElement);
+                    });
+                } else {
+                    console.log('User is not logged in');
+                    window.location.href = './login.html';
+                }
+            });
         });
 
         post.addEventListener("click", (e) => {
             e.preventDefault();
             window.location.href = '../../blog/post.html';
         });
-
-        try {
-        // Get reference to the container where posts will be rendered
-        const postsContainer = document.getElementById('posts-container');
-
-        // Get the UID of the currently logged-in user
-        const currentUser = await getCurrentUser();
-
-        // Fetch blog posts data from Firestore for the current user
-        const snapshot = await firestore.collection('blogs').where('uid', '==', currentUser.uid).get();
-        snapshot.forEach(doc => {
-            const post = doc.data();
-
-            // Create HTML elements for each post
-            const postDiv = document.createElement('div');
-            postDiv.classList.add('post');
-
-            const titlePara = document.createElement('p');
-            titlePara.textContent = `Title: ${post.title}`;
-
-            const contentPara = document.createElement('p');
-            contentPara.textContent = `Content: ${post.content}`;
-
-            // Append elements to the container
-            postDiv.appendChild(titlePara);
-            postDiv.appendChild(contentPara);
-            postsContainer.appendChild(postDiv);
-        });
-    } catch (error) {
-        console.error('Error fetching posts:', error);
-    }
-
-
-async function getCurrentUser() {
-    return new Promise((resolve, reject) => {
-        const unsubscribe = firebase.auth().onAuthStateChanged(user => {
-            unsubscribe();
-            resolve(user);
-        }, reject);
-    });
-}
     </script>
 </body>
 </html>
