--- a/forum/detail.html
+++ b/forum/detail.html
@@ -15,9 +15,10 @@
         <nav  class="navigation hide" id="navigation">
             <span class="close-icon" id="close-icon" onclick="showIconBar()" ><i class="fa fa-close"></i></span>
             <ul class="nav-list">
-                <li class="nav-item"><a href="forum.html">Home</a></li>
+                <li class="nav-item"><a href="forum.html">Forum</a></li>
                 <li class="nav-item"><a href="posts.html">Posts</a></li>
                 <li class="nav-item"><a href="detail.html">Detail</a></li>
+                <li class="nav-item"><a href="../home/main.html">Home</a></li>
             </ul>
         </nav>
         <a href="#" class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
@@ -52,10 +53,10 @@
             <div class="body">
                 <div class="authors">
                     <div class="username"><a href="">Username</a></div>
-                    <div>Role</div>
+                    <!-- <div>Role</div> -->
                     <img src="https://cdn.pixabay.com/photo/2015/11/06/13/27/ninja-1027877_960_720.jpg" alt="">
-                    <div>Posts: <u>45</u></div>
-                    <div>Points: <u>5423</u></div>
+                    <!-- <div>Posts: <u>45</u></div>
+                    <div>Points: <u>5423</u></div> -->
                 </div>
                 <div class="content">
                     Just a comment of the above random topic.
@@ -88,10 +89,9 @@
            <div class="body">
                <div class="authors">
                    <div class="AnotherUser"><a href="">Username</a></div>
-                   <div>Role</div>
+                   <!-- <div>Role</div> -->
                    <img src="https://cdn.pixabay.com/photo/2015/11/06/13/27/ninja-1027877_960_720.jpg" alt="">
-                   <div>Posts: <u>45</u></div>
-                   <div>Points: <u>5423</u></div>
+                   
                </div>
                <div class="content">
                    Just a comment of the above random topic.
